# pacs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
pacs/: Cargo.toml
pacs-cli/: Cargo.toml
pacs-cli/src/: lib.rs
pacs-core/: Cargo.toml
pacs-core/examples/: usage.rs
pacs-core/src/: lib.rs
pacs-tui/: Cargo.toml
pacs-tui/src/: app.rs  client.rs  commands.rs  help.rs  highlight.rs  lib.rs  main.rs  sidebar.rs  theme.rs  util.rs
pacs-tui/src/components/: mod.rs  selectable_text.rs
pacs/demo/: demo.tape
pacs/src/: main.rs
scripts/: bump-version.sh
