[workspace]
resolver = "3"
members = ["pacs", "pacs-cli", "pacs-core", "pacs-tui"]

[workspace.package]
version = "0.1.1"
repository = "https://github.com/preiter93/pacs"
edition = "2024"
authors = ["preiter <phil.reiter93@gmail.com>"]
license = "MIT"
description = "Project Aware Command Storage - A CLI for managing and running saved shell commands"
readme = "README.md"

[workspace.dependencies]
pacs-cli = { path = "pacs-cli", version = "0.1.1" }
pacs-core = { path = "pacs-core", version = "0.1.1" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
