[package]
name = "pacs-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

dirs = "6.0"
fuzzy-matcher = "0.3"
toml = "0.9"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "usage"
