[package]
name = "pacs-tui"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
cli-clipboard = "0.4"
pacs-core = { workspace = true }
ratatui = "0.30.0"
tui-world = "0.1"
tui-theme-builder = "0.2"
